# ccit-c

./: CMakeLists.txt  array.c  array.h  common.c  common.h  def.h  demo.c  demo2.c  string.c  string.h
homework/: 1129(2).c  1129.c  CMakeLists.txt  任意个正数之和，遇到负数截止.c  作业1026.c  华氏度转摄氏度.c  圆和圆柱.c  星花组成菱形.c  水仙花数(1).c  购物折扣.c  输出ASCII比它大5的字符.c
tasks/: task1.c  task1_safe.c
tasks1/: CMakeLists.txt  gtk-ui.ui  lib.c  lib.h  task1.c  task1_gtk.c  task1_safe.c
